# good_soup

./: Cargo.toml  README.md  Rocket.toml  \  currentTasks.md
database/: users.sqlite
db/: db.sqlite
meetingNotes/: 1.md
src/: \  account.rs  main.rs  models.rs
src/models/: account.rs  user.rs
src/test_common/: Database.rs
templates/: app.html.hbs  homepage.html.hbs  index.html.hbs  list_of_users.html.hbs  login.html.hbs  signup.html.hbs  test.html.hbs
