[package]
name = "good_soup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rocket = "0.5.0"
string-builder = "0.2.0"
[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]
[dependencies.rocket_db_pools]
features = ["sqlx_sqlite"]
version = "0.1.0"
[dependencies.sqlx]
features = ["macros", "migrate"]
default_features = false
version = "0.7"
#[dependencies.diesel_mysql]

#//[dependencies.rocket_db_pools]
#version = "0.1.0-rc.2"
#features = ["sqlx_mysql"] SL connection error: error:0A000102S
